yamls/couchdb/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-svc-couchdb
  annotations:
    tailscale.com/expose: "true"
